--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <link rel="stylesheet" href="style.css">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Пример веб-страницы</title>
+  <a href="page2.html">Page 2</a>
 </head>
   
