--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Пример веб-страницы</title>
   <a href="page2.html">Page 2</a>
+  <a href="page3.html">Page 3</a>
 </head>
   
