--- a/page2.html
+++ b/page2.html
@@ -4,5 +4,6 @@
   <body>
     <h1>My second page</h1>
     <a href="page3.html">Page 3</a>
+    <a href="index.html">Page 1</a>
     </body>
   </html>
