--- a/page3.html
+++ b/page3.html
@@ -2,6 +2,7 @@
   <head>
     </head>
   <body>
+    <h1>Page 3</h1>
     <a href="index.html">Page 1</a>
     <a href="page2.html">Page 2</a>
   </body>
