--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
   <head>
     </head>
   <body>
+    <link rel="stylesheet" href="style.css">
     <h1>My second page</h1>
     <a href="page3.html">Page 3</a>
     <a href="index.html">Page 1</a>
