--- a/page2.html
+++ b/page2.html
@@ -1,8 +1,8 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" type="text/css">
     </head>
   <body>
-    <link rel="stylesheet" href="style.css">
     <h1>My second page</h1>
     <a href="page3.html">Page 3</a>
     <a href="index.html">Page 1</a>
